// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTwo renders a Loading... message 1`] = `
<TaskTwo>
  <div
    className="task"
  >
    <h1>
      Task Two
    </h1>
    <div
      className="content"
    >
      <Formik
        initialValues={
          Object {
            "username": "Bret",
          }
        }
        onSubmit={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <label
              htmlFor="username"
            >
              Username:
            </label>
            <Field
              id="username"
              name="username"
              type="text"
            >
              <input
                id="username"
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="Bret"
              />
            </Field>
            <FormikConnect(ErrorMessageImpl)
              component="div"
              name="username"
            >
              <ErrorMessageImpl
                component="div"
                formik={
                  Object {
                    "dirty": false,
                    "errors": Object {},
                    "getFieldHelpers": [Function],
                    "getFieldMeta": [Function],
                    "getFieldProps": [Function],
                    "handleBlur": [Function],
                    "handleChange": [Function],
                    "handleReset": [Function],
                    "handleSubmit": [Function],
                    "initialErrors": Object {},
                    "initialStatus": undefined,
                    "initialTouched": Object {},
                    "initialValues": Object {
                      "username": "Bret",
                    },
                    "isSubmitting": false,
                    "isValid": true,
                    "isValidating": false,
                    "registerField": [Function],
                    "resetForm": [Function],
                    "setErrors": [Function],
                    "setFieldError": [Function],
                    "setFieldTouched": [Function],
                    "setFieldValue": [Function],
                    "setFormikState": [Function],
                    "setStatus": [Function],
                    "setSubmitting": [Function],
                    "setTouched": [Function],
                    "setValues": [Function],
                    "status": undefined,
                    "submitCount": 0,
                    "submitForm": [Function],
                    "touched": Object {},
                    "unregisterField": [Function],
                    "validateField": [Function],
                    "validateForm": [Function],
                    "validateOnBlur": true,
                    "validateOnChange": true,
                    "validateOnMount": false,
                    "values": Object {
                      "username": "Bret",
                    },
                  }
                }
                name="username"
              />
            </FormikConnect(ErrorMessageImpl)>
            <button
              disabled={true}
              type="submit"
            >
              Submit
            </button>
          </form>
        </Form>
      </Formik>
      <div>
        Loading...
      </div>
    </div>
  </div>
</TaskTwo>
`;

exports[`TaskTwo renders a todo list 1`] = `
<TaskTwo>
  <div
    className="task"
  >
    <h1>
      Task Two
    </h1>
    <div
      className="content"
    >
      <Formik
        initialValues={
          Object {
            "username": "Bret",
          }
        }
        onSubmit={[Function]}
      >
        <Form>
          <form
            action="#"
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <label
              htmlFor="username"
            >
              Username:
            </label>
            <Field
              id="username"
              name="username"
              type="text"
            >
              <input
                id="username"
                name="username"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="Bret"
              />
            </Field>
            <FormikConnect(ErrorMessageImpl)
              component="div"
              name="username"
            >
              <ErrorMessageImpl
                component="div"
                formik={
                  Object {
                    "dirty": false,
                    "errors": Object {},
                    "getFieldHelpers": [Function],
                    "getFieldMeta": [Function],
                    "getFieldProps": [Function],
                    "handleBlur": [Function],
                    "handleChange": [Function],
                    "handleReset": [Function],
                    "handleSubmit": [Function],
                    "initialErrors": Object {},
                    "initialStatus": undefined,
                    "initialTouched": Object {},
                    "initialValues": Object {
                      "username": "Bret",
                    },
                    "isSubmitting": false,
                    "isValid": true,
                    "isValidating": false,
                    "registerField": [Function],
                    "resetForm": [Function],
                    "setErrors": [Function],
                    "setFieldError": [Function],
                    "setFieldTouched": [Function],
                    "setFieldValue": [Function],
                    "setFormikState": [Function],
                    "setStatus": [Function],
                    "setSubmitting": [Function],
                    "setTouched": [Function],
                    "setValues": [Function],
                    "status": undefined,
                    "submitCount": 0,
                    "submitForm": [Function],
                    "touched": Object {},
                    "unregisterField": [Function],
                    "validateField": [Function],
                    "validateForm": [Function],
                    "validateOnBlur": true,
                    "validateOnChange": true,
                    "validateOnMount": false,
                    "values": Object {
                      "username": "Bret",
                    },
                  }
                }
                name="username"
              />
            </FormikConnect(ErrorMessageImpl)>
            <button
              disabled={false}
              type="submit"
            >
              Submit
            </button>
          </form>
        </Form>
      </Formik>
      <section>
        <h2>
          Bret
        </h2>
        <dl>
          <dt>
            Username
          </dt>
          <dd>
            Leanne Graham
          </dd>
          <dt>
            Email
          </dt>
          <dd>
            Sincere@april.biz
          </dd>
          <dt>
            Website
          </dt>
          <dd>
            hildegard.org
          </dd>
        </dl>
      </section>
      <section>
        <h2>
          Todo
        </h2>
        <ul>
          <li
            key="1"
          >
            a task still to do
          </li>
        </ul>
      </section>
      <section>
        <h2>
          Completed
        </h2>
        <ul>
          <li
            key="2"
          >
            a completed task
          </li>
        </ul>
      </section>
    </div>
  </div>
</TaskTwo>
`;
